--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.19.0",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
     "prettier": "^3.4.2",
-    "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
